--- a/projetovelasco/historia.html
+++ b/projetovelasco/historia.html
@@ -58,51 +58,11 @@
         <section class="historia">
             <div class="interface">
                 <div class="pag2">
-                    <h1>História do Velasco</h1>
-                    <p> Um grupo de amigos de escola com mais de 30 anos de amizade e amantes do handebol se reuniram em 2019 para o retorno do bate bola e criação da Equipe Velasco, nome esse em 
-                      homenagem a Escola Estadual "Padre Antônio Velasco Aragon", localizada no Bairro Jardim São Domingos em Guarulhos, onde a maior parte dos fundadores iniciaram o conceito
-                      do handebol. Onde a ideia é usar o esporte em ações beneficente, inlusão social e resgatar atletas dos anos 90 e 2000 do handebol guarulhense. Com essa intenção foi dado 
-                      o início do bate-bola aos domingos, aberto para todos e a partir daí montar uma base competitiva para formação da equipe Velasco. Com a ajuda das redes sociais e o bate-bola 
-                      aberto para todos que queiram participar da modalidade sem distinção, a família Velasco só cresce e a cada dia conquista mais simpatizantes para o projeto "Família Velasco".</p>
-                      <div class="image-gallery">
-                        <img src="./img/imagem 1.jpeg" alt="Imagem 1">
-                        <img src="./img/imagem 2.jpeg" alt="Imagem 2">
-                        <img src="./img/imagem 3.jpeg" alt="Imagem 3">
-                    </div>
-                    
-
-                    <!-- Tópicos -->
-
-                    <div class="info-sections">
-                      <div class="section">
-                          <h2>Objetivos</h2>
-                          <p>Nosso objetivo é na formação de atletas por meio da modalidade em equipes de competições, buscando o envolvimento na prática esportiva, formando equipes
-                            alto rendimento para representar a cidade em competições oficiais, por meio do desenvolvimento e o aperfeiçoamento técnico e tático em diversas categorias.</p>
-                      </div>
-                      <div class="section">
-                          <h2>Propósito</h2>
-                          <p>Formação de cidadãos e atletas engajados com a responsabilidade social, repeito a família e principalmente encorajar e incentivar as crianças educacionalmente 
-                            e esportivamente, para a transformação social e profissional.</p>
-                      </div>
-                      <div class="section">
-                        <h2>Oportunidades</h2>
-                        <ul>
-                            <li>Lei de incentivo para formação de atletas</li>
-                            <li>Escolinha de Handebol Velasco</li>
-                            <li>Cidade com 1,4 milhões de habitantes, grande público para adesão</li>
-                            <li>Patrocínios de empresas para manter a estrutura do time Velasco</li>
-                        </ul>
-                    </div>                    
-                  </div>
-              </div>
+                    <h1>Historia do time</h1>
                 </div>
             </div>
         </section>
 
-
-          <!-- TESTE GIT -->
-
-      
         <div class="whats">
           <a href=" https://wa.me/5511940090003?text=Olá, Gostaria de fazer um orçamento!!" target="_blank">
           <img src="img/whats.png" width="50" alt="Fale Conosco pelo WhatsApp" title="Fale Conosco pelo WhatsApp">
