--- a/projetovelasco/index.html
+++ b/projetovelasco/index.html
@@ -80,13 +80,13 @@
             <div class="col-sm-6">
             <h1>Quem somos?</h1>
             <div class="line-mf"></div>
-            <p>O Velasco é uma família que conhece a importância da prática esportiva em nossa sociedade e sabemos que vai além dos beneficios na saúde física, 
-            temos pessoas qualificadas na parte esportiva. Hoje o Velasco é referência em bate bola aberto na cidade de Guarulhos e assim fortalecendo a inclusão social. 
-            <a href="historia.html">Saiba mais!</a> </p>
+            <p>O Velasco é uma família que conhece a importância da prática esportiva em nossa sociedade e sabemos que vai além dos beneficios na saúde física, temos pessoas qualificadas na parte esportiva. Hoje o Velasco é referência em bate bola aberto na cidade de Guarulhos e assim fortalecendo a inclusão social. <a href="historia.html">Saiba mais!</a> </p>
             <img src="img/time.jpg" alt="">  
             </div>
           </div>
         </div>
+      </section>
+
        <!-- Icone WhatsApp -->
 
    <div class="whats">
@@ -94,11 +94,6 @@
     <img src="img/whats.png" width="50" alt="Fale Conosco pelo WhatsApp" title="Fale Conosco pelo WhatsApp">
     </a>
     </div>
-
-
-
-
-
     
 </body>
 </html>
